# zettel-merken

./: .env.example  .gitignore  LICENSE.txt  README.md  __main__.py  add_systemd_timer.bash  cli.js  config.example.json  config_example.py  configure-systemd.sh  package.json  pyproject.toml  sample_config.py  server.js  test_zettel_merken.py  zettel_merken.py  zettel_merken.test.db
extras/: add_systemd_timer.bash  add_systemd_timer.py  add_systemd_units.py  config.test.json  remove_all_data.py  sample_config.py
extras/test_folder/note_folder_1/: note-1.md
job/: zettel-merken.service  zettel-merken.timer
sample_folder/note_folder_2/: note-3.md  note-4.norg
src/: config.py  core.js  core.py  db.py  helpers.py  mail.py  server.js  utils.js  zettel_merken.py
test/: test.js  test_zettel_merken.py
test/sample_folder/ignore-folder/: note-x.md
tests/: test_zettel_merken.py
zettelmerken/: __about__.py  __init__.py  __main__.py  config.py  core.py  db.py  helpers.py  mail.py
