[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Zettel Merken"
description = "Supercharge your learning by combining two of the most revolutionary ideas in knowledge enhancement!"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["knowledge", "learning", "notes", "reminder"]
authors = [
  { name = "Pritesh Tupe", email = "mail@priteshtupe.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/empat94/zettel-merken#readme"
Issues = "https://github.com/empat94/zettel-merken/issues"
Source = "https://github.com/empat94/zettel-merken"

[tool.hatch.version]
path = "zettel_merken/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=zettel_merken --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "zettel_merken/__about__.py",
  "zettel_merken/__init__.py",
  "zettel_merken/mail.py",
  "tests/*.py"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
